--- a/src/main/resources/bungee.yml
+++ b/src/main/resources/bungee.yml
@@ -3,7 +3,7 @@ version: ${project.version}
 api-version: 1.13
 main: ${project.groupId}.${project.artifactId}.bungee.BungeeNetworkInterceptor
 description: ${project.description}
-author: drives_a_ford, Luck, SlimeDog
+author: drives_a_ford, Luck, SlimeDog, xSavior_of_God
 load: STARTUP
 depend: []
 softdepend: [LuckPerms]
