--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.lucko</groupId>
     <artifactId>networkinterceptor</artifactId>
-    <version>3.4.3</version>
+    <version>3.4.3_byHeroxWar</version>
     <packaging>jar</packaging>
 
     <name>NetworkInterceptor</name>
@@ -33,68 +33,69 @@
         </resources>
         <plugins>
 
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.6.0</version>
-        <configuration>
-          <relocations>
-            <relocation>
-              <pattern>org.bstats</pattern>
-              <shadedPattern>me.lucko.networkinterceptor.bstats</shadedPattern>
-            </relocation>
-            <relocation>
-              <pattern>dev.ratas.slimedogcore</pattern>
-              <shadedPattern>${project.groupId}.${project.artifactId}.core</shadedPattern>
-            </relocation>
-          </relocations>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin> <!--
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <relocations>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>me.lucko.networkinterceptor.bstats</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>dev.ratas.slimedogcore</pattern>
+                            <shadedPattern>${project.groupId}.${project.artifactId}.core</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin> <!--
                 This helps move version information for Velocity plugin
                 instance to a class from which it can be read.
                 This is needed in order to automate version propagation.
                -->
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>templating-maven-plugin</artifactId>
-        <version>1.0.0</version>
-        <executions>
-          <execution>
-            <id>filter-src</id>
-            <goals>
-              <goal>filter-sources</goal>
-            </goals>
-                <configuration>
-                  <!--
-                    Note the two following parameters are the default one.
-                    These are specified here just as a reminder.
-                    But as the Maven philosophy is strongly about conventions,
-                    it's better to just not specify them.
-                  -->
-                  <sourceDirectory>${basedir}/src/main/java-templates</sourceDirectory>
-                  <outputDirectory>${project.build.directory}/generated-sources/java-templates</outputDirectory>
-                </configuration>
-          </execution>
-        </executions>
-      </plugin>
-			<plugin> <!-- For tests -->
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.3.1</version>
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>3.3.1</version>
-      </plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>templating-maven-plugin</artifactId>
+                <version>1.0.0</version>
+                <executions>
+                    <execution>
+                        <id>filter-src</id>
+                        <goals>
+                            <goal>filter-sources</goal>
+                        </goals>
+                        <configuration>
+                            <!--
+                              Note the two following parameters are the default one.
+                              These are specified here just as a reminder.
+                              But as the Maven philosophy is strongly about conventions,
+                              it's better to just not specify them.
+                            -->
+                            <sourceDirectory>${basedir}/src/main/java-templates</sourceDirectory>
+                            <outputDirectory>${project.build.directory}/generated-sources/java-templates
+                            </outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin> <!-- For tests -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
         </plugins>
     </build>
 
@@ -106,9 +107,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.SlimeDog</groupId>
+            <groupId>com.github.HeroxWar</groupId>
             <artifactId>SlimeDogCore</artifactId>
-            <version>1.2.0_byHeroxWar</version>
+            <version>master-26b6c3f6ce-1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -116,32 +117,33 @@
             <artifactId>bstats-bukkit</artifactId>
             <version>2.2.1</version>
             <scope>compile</scope>
-          </dependency>
-          <dependency>
+        </dependency>
+        <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bungeecord</artifactId>
             <version>2.2.1</version>
             <scope>compile</scope>
-          </dependency>
-          <dependency>
+        </dependency>
+        <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-velocity</artifactId>
             <version>2.2.1</version>
             <scope>compile</scope>
-          </dependency>
-          <dependency>
-              <groupId>net.md-5</groupId>
-              <artifactId>bungeecord-api</artifactId>
-              <version>1.21-R0.1-SNAPSHOT</version>
-              <type>jar</type>
-              <scope>provided</scope>
-          </dependency>
-          <dependency>
-              <groupId>com.velocitypowered</groupId>
-              <artifactId>velocity-api</artifactId>
-              <version>3.1.1</version>
-              <scope>provided</scope>
-          </dependency>
+        </dependency>
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-api</artifactId>
+            <version>1.21-R0.1-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.velocitypowered</groupId>
+            <artifactId>velocity-api</artifactId>
+            <version>3.1.1</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- TESTING -->
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
